# fastapi-docx

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/: pull_request_template.md
.github/actions/setup-python/: action.yaml
.github/workflows/: deploy-docs.yaml  unit-tests.yaml
coverage/: coverage.xml
coverage/coverage.html/: class_index.html  d_4c3a436d791d597e_exception_finder_py.html  d_4c3a436d791d597e_openapi_py.html  d_4c3a436d791d597e_response_generator_py.html  function_index.html  index.html  status.json  z_4c3a436d791d597e_exception_finder_py.html  z_4c3a436d791d597e_openapi_py.html  z_4c3a436d791d597e_response_generator_py.html
custom-exceptions/: index.html
docs/: getting-started.md  index.md
docs/custom-exceptions/: index.md
docs/find-exception-responses/: dependency-or-service-classes.md  overview.md
docs/js/: custom.js
docs/response-schemas/: index.md
fastapi_docx/: __init__.py  exception_finder.py  openapi.py  response_generator.py
find-exception-responses/dependency-or-service-classes/: index.html
find-exception-responses/overview/: index.html
getting-started/: index.html
response-schemas/: index.html
search/: search_index.json
tests/unit_tests/: conftest.py  setup.py  test_dependency_exceptions.py  test_multiple_exceptions.py  test_service_exceptions.py  test_simple_app.py  test_single_exception.py
tests/unit_tests/fixtures/: custom_exceptions.py  dependencies.py  services.py
