[tool.poetry]
name = "fastapi-docx"
version = "0.1.0"
description = "Extend a FastAPI OpenAPI spec to include all possible HTTPException or custom Exception response schemas."
authors = ["Saran Connolly <saran@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Saran33/fastapi-docx"

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.10.1"
fastapi = "^0.88.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"
httpx = "^0.23.1"
isort = "^5.10.1"
mypy = "^0.991"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-randomly = "^3.12.0"
pytest-xdist = "^3.1.0"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]

[tool.flake8]
# flake8 doesn't support toml yet

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
mypy_path = "./mypy"
follow_imports = "skip"
packages = ["fastapi_docx", "tests"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true


[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_calls = false
disallow_untyped_defs = false
warn_no_return = false
warn_return_any = false
